refactor: add exploration of 'full_name' column

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -209,6 +209,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "id": "0ac37a63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "04e4dc21",
    "metadata": {},
@@ -319,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "d6915c35",
    "metadata": {},
    "outputs": [],
@@ -341,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "4592b7ce",
    "metadata": {},
    "outputs": [],
@@ -351,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "7b87a833",
    "metadata": {},
    "outputs": [],
@@ -364,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "2733d25c",
    "metadata": {},
    "outputs": [
@@ -380,10 +401,10 @@
       " 0   full_name          5000 non-null   object        \n",
       " 1   email              5000 non-null   object        \n",
       " 2   phone              4775 non-null   object        \n",
-      " 3   registration_date  5000 non-null   object        \n",
+      " 3   registration_date  4939 non-null   object        \n",
       " 4   account_status     5000 non-null   object        \n",
-      " 5   dates_parsed       4939 non-null   datetime64[ns]\n",
-      " 6   dates_iso          5000 non-null   object        \n",
+      " 5   dates_iso          4939 non-null   object        \n",
+      " 6   dates_parsed       4939 non-null   datetime64[ns]\n",
       "dtypes: datetime64[ns](1), object(6)\n",
       "memory usage: 441.5+ KB\n"
      ]
@@ -391,6 +412,179 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e0478bbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>client_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5995</th>\n",
+       "      <td>Patrick</td>\n",
+       "      <td>Gonzalez</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5996</th>\n",
+       "      <td>Andrea</td>\n",
+       "      <td>Burns</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5997</th>\n",
+       "      <td>James</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>Jr.</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5998</th>\n",
+       "      <td>Alan</td>\n",
+       "      <td>Casey</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5999</th>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>Bennett</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  0         1     2     3\n",
+       "client_id                                \n",
+       "5995        Patrick  Gonzalez  None  None\n",
+       "5996         Andrea     Burns  None  None\n",
+       "5997          James     Smith   Jr.  None\n",
+       "5998           Alan     Casey  None  None\n",
+       "5999       Patricia   Bennett  None  None"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names_split = df['full_name'].str.split(' ', expand=True)\n",
+    "names_split.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "838d4dd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 5000 entries, 1000 to 5999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   0       5000 non-null   object\n",
+      " 1   1       5000 non-null   object\n",
+      " 2   2       215 non-null    object\n",
+      " 3   3       23 non-null     object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 324.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "names_split.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "f7ccc3f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_2 = []\n",
+    "for idx, value in names_split[2].items():\n",
+    "    if value:\n",
+    "        id_2.append(idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5680b482",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_3 = []\n",
+    "for idx, value in names_split[3].items():\n",
+    "    if value:\n",
+    "        id_3.append(idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "198bb7cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "215 {3586, 2565, 1543, 2567, 4615, 4627, 3092, 1557, 2582, 2583, 1048, 1049, 2074, 3611, 1564, 4119, 4632, 5144, 1063, 5673, 5164, 4142, 4655, 5680, 3636, 1591, 3128, 2617, 2618, 5689, 5182, 1599, 4162, 1093, 3659, 3662, 4176, 5204, 1621, 3162, 4189, 5213, 2147, 3171, 4708, 2664, 1129, 3583, 4717, 3182, 5744, 4721, 5746, 1139, 2676, 3189, 3190, 3701, 4212, 1145, 2682, 1150, 3199, 1153, 1156, 4229, 3207, 4743, 3209, 5770, 2188, 3220, 3223, 4759, 4250, 1692, 3744, 1702, 2215, 5802, 2733, 4272, 1713, 3762, 5808, 1716, 3764, 1209, 2233, 1212, 5310, 3776, 5824, 1218, 3267, 4291, 4293, 4802, 1223, 4808, 5320, 3276, 1741, 3278, 1743, 5324, 5841, 3802, 3806, 3807, 3809, 4322, 5865, 1261, 3821, 4845, 2289, 3313, 5874, 1788, 1277, 1796, 4357, 5140, 1293, 5901, 3856, 3857, 3861, 2326, 4376, 3867, 5916, 3357, 2846, 5406, 5654, 5415, 1834, 2348, 3886, 5426, 2357, 1846, 2873, 5950, 4416, 2885, 4422, 4424, 2378, 4938, 1870, 3408, 3920, 5968, 4435, 2901, 5974, 4953, 1882, 4444, 1374, 2398, 2399, 5984, 5994, 1900, 5485, 1390, 1903, 5997, 4466, 1397, 1911, 4478, 2434, 1414, 3463, 5510, 5511, 1930, 3982, 1423, 3471, 1427, 5013, 1946, 3995, 5536, 5538, 2979, 1446, 4526, 4527, 2480, 1462, 5053, 3521, 5573, 5068, 4562, 2004, 3028, 2520, 2009, 1499, 1504, 3042, 3565, 4589, 3058, 2037, 1533, 1535}\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_problematic_records = set(id_2 + id_3)\n",
+    "print(len(all_problematic_records), all_problematic_records)"
    ]
   }
  ],
